# ShopifyLLM

./: .gitignore  README_new.md  app.py  auto_store_generator.py  chat_assistant.py  check_products.py  clean_store.py  compare_models.py  comprehensive_shopify_data.jsonl  config.py  debug_products.py  image_generator.py  inference.py  main.py  manual_test.py  pyproject.toml  requirements.txt  run_store_creator.py  setup.py  shopify_builder.py  shopify_data.jsonl  simple_test.py  start_training.py  store_builder.py  store_planner.py  test_assistant.py  test_inventory_parsing.py  test_market_research.py  test_toilet_paper_pricing.py  test_toilet_paper_store.py  train.py  validate_dataset.py
docs/: README.md  SHOPIFY_SETUP.md  WEB_APP_GUIDE.md
shopify_llama_8b_finetuned/: README.md  adapter_config.json
shopify_llama_8b_results/checkpoint-125/: rng_state.pth  scheduler.pt  trainer_state.json
shopify_llama_8b_results/checkpoint-140/: rng_state.pth  scheduler.pt  trainer_state.json
src/: __init__.py
src/api/: __init__.py  app.py
src/config/: __init__.py  shopify_config.py
src/core/: __init__.py  store_builder.py
src/services/: __init__.py  chat_assistant.py  market_research.py
src/utils/: check_inventory.py
static/css/: style.css
static/js/: main.js
templates/: index.html
tests/: __init__.py
tests/unit/: test_ai_response.py  test_name_extraction.py  test_shopify_connection.py  test_water_bottle.py
